<resources>
    <string name="app_name">My Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="item_name">City Name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="details">Details...</string>
    <string name="logo">Logo</string>
    <string name="current_temperature">Current Temperature:</string>
    <string name="description2">Description:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="minimum_temp">Minimum Temp:</string>
    <string name="maximum_temp">Maximum Temp:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="weather_info">Weather Info</string>
    <string name="ross_bower">Ross Bower</string>
    <string name="add_city">Add City</string>
    <string name="about">About</string>
</resources>
